stuck on character encoding issues

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -264,3 +264,11 @@ textarea {
         page-break-after: avoid;
     }
 }
+
+/* ==========================================================================
+   My rules
+   ========================================================================== */
+
+body {
+    margin-left: 20px;
+}
